--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <main>
-        <form >
             <fieldset>
                 <legend>Formulário de cadastro</legend>
                 <p><label>Nome</label>
@@ -33,9 +32,9 @@
                      onclick="cadastro()">  Salvar </button>
 
                 </p>
-
+                <p><button onclick="exibir()">Mostrar Salvos</button></p>
+                <label for="" id="label-exibir"></label>
             </fieldset>
-        </form>
     </main>
     
 </body>
